--- a/css/layout.css
+++ b/css/layout.css
@@ -17,8 +17,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 img { display: block; border: none; }
 
-.header_content, .th_design, .th_rwdBox, .footer_content, .works, .word_other { max-width: 100%; margin-left: auto; margin-right: auto; max-width: 1200px; }
-.header_content:after, .th_design:after, .th_rwdBox:after, .footer_content:after, .works:after, .word_other:after { content: " "; display: block; clear: both; }
+.header_content, .th_design, .th_rwdBox, .footer_content, .works { max-width: 100%; margin-left: auto; margin-right: auto; max-width: 1200px; }
+.header_content:after, .th_design:after, .th_rwdBox:after, .footer_content:after, .works:after { content: " "; display: block; clear: both; }
 
 .th_rwd > header:before { display: inline-block; vertical-align: middle; width: 0px; height: 100%; content: ""; visibility: hidden; }
 
@@ -48,21 +48,17 @@ main { background-color: #FFF; padding: 40px 0; }
 nav { height: 50px; width: 100%; position: fixed; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.8); z-index: 3; }
 nav ul { white-space: normal; text-align: center; }
 nav li { display: inline-block; position: relative; }
-nav li:hover:before, nav li.on:before { content: ""; width: 100%; height: 2px; background-color: #FFF; position: absolute; bottom: 5px; left: 0; }
+nav li:hover:before { content: ""; width: 100%; height: 2px; background-color: #FFF; position: absolute; bottom: 5px; left: 0; }
 nav li.none { display: none; }
 nav li a { color: #FFF; text-decoration: none; display: inline-block; padding: 0 5px; line-height: 50px; }
 
-#header { height: 100%; background-image: url(../images/bg.jpg); background-position: center bottom; background-size: cover; position: fixed; top: 0; width: 100%; }
-
-.indexWrap { margin-top: 600px; }
+#header { background-color: #f08c89; height: 300px; background-image: url("../images/headBg.png"), url("header.svg"), linear-gradient(75deg, #555555 15%, #999999 55%); background-size: 256px 256px,100% 110%,auto; background-repeat: repeat, no-repeat, no-repeat; }
 
 #menu { display: none; -moz-transition: 0.3s; -o-transition: 0.3s; -webkit-transition: 0.3s; transition: 0.3s; background-color: rgba(0, 0, 0, 0.5); -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
 
-.pageTitle { font-size: 20px; padding: 20px; font-weight: bolder; text-align: center; background-color: #eee; display: none; }
-
-.header_content { padding-top: 130px; }
-.header_content h1 { height: 90px; width: 90px; float: left; margin-right: 32px; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; border: 1px solid #fff; display: flex; align-items: center; padding: 16px; }
-.header_content h1 img { max-width: 100%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.header_content { padding-top: 77px; }
+.header_content h1 { width: 200px; float: left; margin-right: 20px; }
+.header_content h1 img { width: 100%; display: inline-block; background-color: rgba(255, 255, 255, 0.8); -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; border: 3px solid #fff; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .introMy { text-align: center; width: 600px; margin: auto; }
 .introMy p { text-align: left; color: #FFF; font-size: 16px; line-height: 25px; }
@@ -70,7 +66,7 @@ nav li a { color: #FFF; text-decoration: none; display: inline-block; padding: 0
 
 a.btn_more { background-color: #ff7088; color: #FFF; background-image: url(../images/borrow.png); background-repeat: no-repeat; background-position: left 12px; padding-left: 25px; padding-top: 10px; padding-bottom: 10px; }
 
-.th_design { margin-top: -120px; margin-bottom: 40px; text-align: center; background: #FFF; padding: 30px 20px; }
+.th_design { margin-bottom: 40px; text-align: center; }
 
 .md_design { width: 47.91667%; float: left; margin-left: 1.04167%; margin-right: 1.04167%; margin-bottom: 40px; text-align: center; }
 .md_design:hover > a img { -moz-transform: scale(1.1); -ms-transform: scale(1.1); -webkit-transform: scale(1.1); transform: scale(1.1); -moz-transition: transform(0.3s); -o-transition: transform(0.3s); -webkit-transition: transform(0.3s); transition: transform(0.3s); }
@@ -80,7 +76,7 @@ a.btn_more { background-color: #ff7088; color: #FFF; background-image: url(../im
 .md_design .pic { height: 280px; overflow: hidden; margin-bottom: 10px; }
 .md_design .btn_basic { border: 1px solid #f08c89; margin-top: 10px; }
 
-.th_rwd > header { background: url(../images/RWD_Bg.jpg) no-repeat right center; height: 500px; margin-bottom: 40px; text-align: center; }
+.th_rwd > header { background: url(../images/RWD_Bg.jpg) no-repeat right center; height: 270px; margin-bottom: 40px; text-align: center; }
 
 .pt_rwd { background-color: rgba(0, 0, 0, 0.5); display: inline-block; width: 200px; height: 200px; padding: 20px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; position: relative; }
 .pt_rwd:before { content: ""; width: 210px; height: 210px; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; border: 1px solid rgba(255, 255, 255, 0.6); position: absolute; top: -6px; left: -6px; }
@@ -116,24 +112,13 @@ a.btn_more { background-color: #ff7088; color: #FFF; background-image: url(../im
 .note:before { bottom: -15px; left: 40px; border-width: 15px 15px 0; border-color: #666 transparent; }
 .note:after { bottom: -13px; left: 42px; border-width: 13px 13px 0; border-color: #fff transparent; }
 
-.word_other { padding: 30px; }
-.word_other h4 { font-size: 24px; margin-top: 32px; margin-bottom: 16px; }
-
-.ui { display: inline-block; margin: 8px; }
-
 @media (min-width: 0px) { html, body { min-width: 320px; } }
 @media (max-width: 980px) { .md_design h3 { min-height: 60px; }
   .th_rwd > header { height: 270px; }
   .md_rwd .pic { height: 150px; }
-  .footer_content { padding-right: 20px; padding-left: 20px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-  .word_other { overflow: hidden; }
-  .word_other h4 { float: left; width: 100%; font-size: 18px; }
-  .ui { display: block; width: 47.91667%; float: left; margin-left: 1.04167%; margin-right: 1.04167%; }
-  .ui img { max-width: 100%; } }
+  .footer_content { padding-right: 20px; padding-left: 20px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; } }
 @media (max-width: 720px) { #menu { display: block; }
   #header { height: auto; padding-bottom: 20px; }
-  main { padding: 0; }
-  .pageTitle { display: block; }
   .introMy { width: 72.91667%; float: left; margin-left: 13.54167%; margin-right: -100%; margin-right: auto; }
   .introMy > h1 { float: none; margin: auto; }
   .introMy > p { text-align: justify; }
@@ -146,8 +131,6 @@ a.btn_more { background-color: #ff7088; color: #FFF; background-image: url(../im
   .md_design { width: 97.91667%; float: left; margin-left: 1.04167%; margin-right: 1.04167%; padding-right: 20px; padding-left: 20px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
   .md_design h3 { min-height: auto; }
   .md_rwd { width: 97.91667%; float: left; margin-left: 1.04167%; margin-right: 1.04167%; padding-right: 20px; padding-left: 20px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-  .md_rwd .pic { height: 270px; }
-  .word_other { padding: 16px; } }
-@media (max-width: 480px) { .ui { width: 97.91667%; float: left; margin-left: 1.04167%; margin-right: 1.04167%; } }
+  .md_rwd .pic { height: 270px; } }
 
 /*# sourceMappingURL=layout.css.map */
